relay/deploy/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay
spec:
  template:
    spec:
      containers:
        - name: relay
          image: python-ndk-relay
          livenessProbe:
            httpGet:
              path: /healthz
              port: 2700
            failureThreshold: 1
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /healthz
              port: 2700
            failureThreshold: 6
            periodSeconds: 5
